[package]
name = "intoh"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Simple program to turn a file in a string that can be included from c"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.27", features = ["derive"] }
